remove attributes handled but to be continues